<resources>
    <string name="app_name">Ranch</string>
    <string name="selezionaUnCameriere">Seleziona un cameriere</string>
    <string name="termina">Termina</string>
    <string name="admin">Admin</string>
    <string name="conferma">Conferma</string>
    <string name="seleziona_un_cameriere">Seleziona un cameriere</string>
    <string name="title_activity_activity_camerieri">ActivityCamerieri</string>
    <string name="action_settings">Impostazioni</string>
    <string name="title_activity_camerieri">Seleziona un cameriere:</string>
    <string name="title_activity_gestione_comande">GestioneComande</string>
    <string name="gestione_comande">GESTIONE COMANDE</string>
    <string name="scarica_comande">SCARICA COMANDE</string>
    <string name="title_activity_insrisci_tavolo">InsrisciTavolo</string>
    <string name="bevande">BEVANDE</string>
    <string name="birre">BIRRE</string>
    <string name="coca_cola">COCA COLA</string>
    <string name="vini">VINI</string>
    <string name="lattine">LATTINE</string>
    <string name="caffe">CAFFE\'</string>
    <string name="pizze">PIZZE</string>
    <string name="carne">CARNE</string>
    <string name="pesce">PESCE</string>
    <string name="primi_piatti">PRIMI</string>
    <string name="cucina">CUCINA</string>
    <string name="contorni">CONTORNI</string>
    <string name="gelati">GELATI</string>
    <string name="dessert">DESSERT</string>
    <string name="amari_liquori">AMARI \nLIQUORI</string>
    <string name="servizio">SERVIZIO</string>
    <string name="title_activity_inserisci_tavolo">InserisciTavolo</string>
    <string name="title_activity_inserisci_servizi">InserisciServizi</string>
    <string name="title_activity_scegli_categoria">ScegliCategoria</string>
    <string name="lista_tavoli">LISTA TAVOLI</string>
    <string name="cap">CAP</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="p">P</string>
    <string name="t">T</string>
    <string name="v">V</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="zero">0</string>
    <string name="canc">CANC</string>
    <string name="numero_tavolo">NUMERO TAVOLO</string>
    <string name="tavolo">Tavolo:</string>
    <string name="schermo">0</string>
    <string name="title_activity_scegli_prodotto">ScegliProdotto</string>
    <string name="action_search">Cerca...</string>
    <string name="download_db">Caricamento delle informazioni in corso...</string>
    <string name="menu_refresh">Refresh</string>
    <string name="elementi_inseriti">Elementi inseriti.</string>
    <string name="refresh">REFRESH</string>
    <string name="elementi_non_inseriti">Si è verificato un errore.</string>
    <string name="errore_lettura">Errore di lettura file.</string>
    <string name="errore_connesione">Errore di connessione.</string>
    <string name="title_activity_activity_prodotto">ActivityProdotto</string>
    <string name="prodotto_inserito">Prodotto inserito.</string>
    <string name="prodotto_non_inserito">Prodotto NON inserito.</string>
    <string name="file_not_exists">Il file NON esiste.</string>
    <string name="menu_done">Fatto</string>
    <string name="ok">OK</string>
    <string name="indietro">Indietro</string>
    <string name="title_dialog_invia_comanda">INVIA COMANDA</string>
    <string name="messaggio_dialog_invia_comanda">Vuoi inviare la comanda?</string>
    <string name="title_activity_elenco_prodotti">ElencoProdotti</string>
    <string name="title_activity_modifica_prodotto">ModificaProdotto</string>
    <string name="prodotto_non_modificato">Prodotto NON modificato.</string>
    <string name="prodotto_modificato_rimosso">Prodotto modificato/rimosso.</string>
    <string name="title_activity_elenco_modifiche">ElencoModifiche</string>
    <string name="title_activity_scegli_aggiunta">ScegliAggiunta</string>
    <string name="comanda_inviata">Comanda inviata.</string>
    <string name="comanda_non_inviata">Comanda non inviata.</string>
    <string name="title_activity_elenco_tavoli">Tavoli</string>
    <string name="con">con</string>
    <string name="senza">senza</string>
    <string name="hint_aggiungi_aggiunta">Inserisci un\'aggiunta</string>
    <string name="non_puoi_eliminare">Impossibile eliminare</string>
    <string name="title_dialog">ATTENZIONE</string>
    <string name="messaggio_dialog">Tornando indietro le modifiche non verranno apportate, vuoi continuare?</string>
    <string name="pallino">S</string>
</resources>
